@@ -15,6 +15,7 @@ functions=[\
 "Atan",
 "Atanv",
 "Atan2",
+"Atan2v",
 "Cos",
 "Cosv",
 "Exp",
@@ -34,6 +35,7 @@ functions=[\
 "Atanf",
 "Atanfv",
 "Atan2f",
+"Atan2fv",
 "Cosf",
 "Cosfv",
 "Expf",
